--- a/views/user/profile.hbs
+++ b/views/user/profile.hbs
@@ -16,7 +16,7 @@
                     </ul>
                 </div>
                 <div class="panel-footer">
-                    <strong>Total Price: ${{ this.cart.totalPrice }}</strong>
+                    <strong>Total Price: Rp. {{ this.cart.totalPrice }}</strong>
                 </div>
             </div>
         {{/each}}
