--- a/views/user/profile.hbs
+++ b/views/user/profile.hbs
@@ -9,7 +9,7 @@
                     <ul class="list-group">
                         {{# each this.items }}
                             <li class="list-group-item">
-                                <span class="badge">{{ this.price }}</span>
+                                <span class="badge">{{ this.price }}000</span>
                                 {{ this.item.title }} | {{ this.qty }} Units
                             </li>
                         {{/each}}
