--- a/views/shop/index.hbs
+++ b/views/shop/index.hbs
@@ -16,7 +16,7 @@
                         <h3>{{ this.title }}</h3>
                         <p class="description">{{ this.description }}</p>
                         <div class="clearfix">
-                            <div class="price pull-left">Rp. {{ this.price }}</div>
+                            <div class="price pull-left">Rp. {{ this.price }}000</div>
                             <a href="/add-to-cart/{{this._id}}" class="btn btn-success pull-right" role="button">Pesan</a>
                         </div>
                     </div>
