--- a/views/shop/keranjang.hbs
+++ b/views/shop/keranjang.hbs
@@ -6,7 +6,7 @@
                     <li class="list-group-item">
                         <span class="badge">{{ this.qty }}</span>
                         <strong>{{ this.item.title }}</strong>
-                        <span class="label label-success">Rp.{{ this.price }}</span>
+                        <span class="label label-success">Rp.{{ this.price }}000</span>
                         <div class="btn-group">
                             <button class="btn btn-primary btn-xs dropdown-toggle" type="button" data-toggle="dropdown">Action <span class="caret"></span></button>
                             <ul class="dropdown-menu">
@@ -21,7 +21,7 @@
     </div>
     <div class="row">
         <div class="col-sm-6 col-md-6 col-md-offset-3 col-sm-offset-3">
-            <strong>Total : Rp. {{ totalPrice }}</strong>
+            <strong>Total : Rp. {{ totalPrice }}000</strong>
         </div>
     </div>
     <hr>
