--- a/views/shop/checkout.hbs
+++ b/views/shop/checkout.hbs
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col-sm-6 col-md-4 col-md-offset-4 col-sm-offset-3">
         <h1>Bayar</h1>
-        <h4>Total Pesanan: Rp. {{total}}</h4>
+        <h4>Total Pesanan: Rp. {{total}}000</h4>
         <div id="charge-error" class="alert alert-danger {{#if noError}}hidden{{/if}}">
             {{errMsg}}
         </div>
